samples/_failures_safe/1761481443_8472ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c6c1a592.c: In function ‘main’:
./samples/SAFE/__tmp_c6c1a592.c:155:9: error: expected declaration or statement at end of input
  155 |         printf("\nVerification: FAILED - Data corrupted\n");
      |         ^~~~~~
./samples/SAFE/__tmp_c6c1a592.c:155:9: error: expected declaration or statement at end of input
